added button to project tab - consulted code for expansion

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
               <div class="skills__btn"><button>Explore</button></div>
             </div>
           </div>
+          <button class="main__btn"><a href="#projects">What Can I Do?</a></button>
         </div>
 
 
