various changes during redesign brainstorm

--- a/index.html
+++ b/index.html
@@ -51,25 +51,26 @@
     <div class="hero" id="home">
       <div class="hero__container">
         <h1 class="hero__heading">Hi, I'm <span>James</span></div></h1>
-        <p class="hero__description"><span><i>I'm a Software Developer based in Sheffield, UK</i></p>
+        <p class="hero__description"><span>I'm a Developer based in Sheffield, UK.</p>
         </div>
     </div>
     <!-- about section -->
     <div class="main" id="about">
       <div class="main__container">
-        <div class="main__image--container">
+        
+        <!-- <div class="main__image--container">
           <div class="main__img--card">
             <img src="https://media-exp1.licdn.com/dms/image/C4D03AQHzs7di0sSt2g/profile-displayphoto-shrink_200_200/0/1647514447031?e=1652918400&v=beta&t=I78Aq_k47mORpTL6qoVjK4iOtlrwhWTJCWCBVsaqkX4" alt="A photo of a man smiling at the camera" width="350" height="350">
           </div>
 
-        </div>
-        <div class="main__content">
+        </div> -->
+        <!-- <div class="main__content">
           <br><br><br><br><br><br><h1><i>Who am I?</i></h1>
-          <p>Holding a Degree in Marketing Communications & Advertising with a background in Creative Media, I pride myself on producing creatively striking, concise and responsive Websites.<br><br>I love championing my professional values of Accessibility & Responsiveness through my work.</p>
+          <p>Holding a Degree in Marketing Communications & Advertising with a background in Creative Media, I pride myself on producing creatively striking, concise and responsive Websites.<br><br>Here's some sample text for when you're bothered to get into the details of this portfolio</p>
           <h1><i>Any good at it?</i></h1>
           <p>I like to think so! You can have a look at my skills in action and see how I've applied this to professional work and personal hobbyist programming.</p>
           <button class="main__btn"><a href="#skills">What Can I Do?</a></button>
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -85,7 +86,7 @@
             </div>
             <div class="skills__card">
               <h2>Back-end</h2>
-              <p>Showcase back-end work and understanding of concepts</p>
+              <p>APIs</p>
               <div class="skills__btn"><button>Explore</button></div>
             </div>
             <div class="skills__card">
@@ -93,14 +94,14 @@
               <p>Showcasing project work, link to skills and develop on concepts</p>
               <div class="skills__btn"><button>Explore</button></div>
             </div>
-            <!-- maybe switch these last two round idk maybe... did you take your meds this morning? -->
+            <!-- maybe switch these last two round idk maybe... -->
             <div class="skills__card">
               <h2>CV</h2>
-              <p>I look great on paper, but even better on Code!</p>
+              <p>I look great on paper.</p>
               <div class="skills__btn"><button>Explore</button></div>
             </div>
           </div>
-          <button class="main__btn"><a href="#projects">What Can I Do?</a></button>
+          <button class="main__btn"><a href="#projects">Stuff I've Made</a></button>
         </div>
 
 
@@ -110,16 +111,16 @@
       <div class="projects__wrapper">
         <div class="projects__card">
           <h2>Web Design & Development</h2>
-          <p>notable examples</p>
+          <p>HTML, CSS, React</p>
           <!-- showcase websites made freelance or as part of future work -->
-          <div class="projects__btn"><button>Explore</button></div>
+          <!-- <div class="projects__btn"><button>Explore</button></div>
         </div>
-        <div class="projects__card">
+        <!-- <div class="projects__card">
           <h2>UX and UI</h2>
           <p>card to showcase frontend work</p>
-          <!-- showcase notable ui work and design with code implementation (color palettes, advertising strategy) -->
+          showcase notable ui work and design with code implementation (color palettes, advertising strategy) -->
           <div class="projects__btn"><button>Explore</button></div>
-        </div>
+        </div> -->
         <div class="projects__card">
           <h2>Intuitive Solutions</h2>
           <p>Visuals of my work in action</p>
@@ -127,8 +128,8 @@
           <div class="projects__btn"><button>Explore</button></div>
         </div>
         <div class="projects__card">
-          <h2>Source Code</h2>
-          <p>Tinkering, Scripting & Testing (link to github)</p>
+          <h2>Blog</h2>
+          <p>I've got a blog which features updates of all my work. </p>
           <!-- github link -->
           <div class="projects__btn"><button>Explore</button></div>
         </div>
