--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navbar Section -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="#home" id="navbar__logo"><i>James Cranham</i></a>
+        <a href="#home" id="navbar__logo"><i>James Cranham - Junior Web Developer for Hire</i></a>
         <!-- navbar logo - text but can be altered or replaced with img -->
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span> 
@@ -74,31 +74,30 @@
       </div>
     </div>
 
-        <!-- skills section -->
+        <!-- skills section CAROUSEL UNDER CONSTRUCTION - IF YOU ARE ME AND YOU'RE READING THIS ON GITHUB GET BACK TO WORK-->
         <div class="skills" id="skills">
-          <h1>Skills & Experience </h1>
+          <h1>carousel</h1>
           <div class="skills__wrapper">
             <div class="skills__card">
-              <h2>Front-End</h2>
-              <p>HTML, CSS, Javascript & Libraries</p>
+              <h2>Personal Projects</h2>
+              <p></p>
               <!-- 3 pages - personal page similar to this but more basic, -->
               <div class="skills__btn"><button>Explore</button></div>
             </div>
             <div class="skills__card">
               <h2>Back-end</h2>
-              <p>APIs</p>
+              <p></p>
               <div class="skills__btn"><button>Explore</button></div>
             </div>
             <div class="skills__card">
               <h2>Personal Projects</h2>
-              <p>Showcasing project work, link to skills and develop on concepts</p>
+              <p></p>
               <div class="skills__btn"><button>Explore</button></div>
             </div>
             <!-- maybe switch these last two round idk maybe... -->
             <div class="skills__card">
-              <h2>CV</h2>
-              <p>I look great on paper.</p>
-              <div class="skills__btn"><button>Explore</button></div>
+              <h2>Resume</h2>
+            <div class="skills__btn"><button>Explore</button></div>
             </div>
           </div>
           <button class="main__btn"><a href="#projects">Stuff I've Made</a></button>
@@ -110,8 +109,9 @@
       <h1>Recent Projects</h1>
       <div class="projects__wrapper">
         <div class="projects__card">
-          <h2>Web Design & Development</h2>
-          <p>HTML, CSS, React</p>
+          <h2>Pomodoro</h2>
+          <p>Productivity assistant, using the 'Pomodoro Technique'</p>
+          <p>Built with React</p>
           <!-- showcase websites made freelance or as part of future work -->
           <!-- <div class="projects__btn"><button>Explore</button></div>
         </div>
@@ -142,7 +142,7 @@
         <div class="main__content">
           <h1><i>Contact Me</i></h1>
           <!-- <h2></h2> -->
-          <p>If you would like to chat about a project or have any questions, please follow the link below to send me an Email.<br><br> I aim to get back to all queries within 2 days. </p>
+          <p>If you would like to discuss any oppurtunities, or have any questions please follow the link below to send me an Email.</p>
           <button class="main__btn"><a href="mailto:jimmycranham@gmail.com">Let's talk!</a></button>
           <!-- TO DO - MAKE A PROFESSIONAL EMAIL AND LINK IT TO THE BUTTON -->
         </div>
@@ -174,15 +174,13 @@
           <div class="footer__link--items">
             <h2>Legal Stuff</h2>
             <a href="/">Copyright/Rights</a>
-            <a href="/"></a>
-            <a href="/">Licences</a>
           </div>
         </div>
       </div>
       <section class="social__media">
         <div class="social__media--wrap">
           <div class="footer__logo">
-            <a href="/" id="footer__logo">made with love, javascript & ☕</a>
+            <a href="/" id="footer__logo">made with love, JavaScript & ☕</a>
           </div>
           <p class="website__rights">© James Cranham, 2021. All rights reserved.</p>
           <div class="social__icons">
