--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
         </div> 
         <div class="main__content">
           <br><br><br><br><br><br><h1><i>Who am I?</i></h1>
-          <p>Personable and tech-orientated marketing graduate. As part of a Web Development 
-            Bootcamp, I gained hard programming skills as well as my soft skills and working within 
-            an Agile team. <br><br>I am a creative problem-solver, passionate about the user journey. 
-            Adaptable and resilient, I was commended for user and client focused presentations.<br><br> 
+          <p>I'm a personable and tech-orientated marketing graduate. As part of a Web Development 
+            Bootcamp, I gained hard programming skills as well as my soft skills and experienced working within 
+            an Agile team. 
+            <br><br>I am a creative problem-solver, passionate about the user journey. 
+            Adaptable and resilient, I was commended for user and client focused presentations.
+            <br><br> 
             Excited to seek a Junior Developer role, with ambitions to further specialize in user 
             experience and UX/UI.</p>
           <button class="main__btn"><a href="#skills">What Can I Do?</a></button>
@@ -83,16 +85,16 @@
       <h1>Projects</h1>
       <div class="projects__wrapper">
         <div class="projects__card">
-          <h2>Pomodoro</h2>
+          <h2>Pomodoro 🍅</h2>
           <h2><i>March 2022</i></h2>
           <!-- make this a link to the page - button? -->
-          <p>Productivity assistant, using the Pomodoro Time Management Technique. Created to solve a personal problem, accessed by multiple users over a variety of use-cases.</p>
+          <p>Productivity assistant, using the Pomodoro Time Management Technique. Created to solve a personal problem, the application is accessed by multiple users over a variety of use-cases.</p>
           <p>Technologies: JavaScript, React, CSS & HTML.</p>
           
           <div class="projects__btn"><button>Explore</button></div>
         </div>
         <div class="projects__card">
-          <h2>MERN Full Stack Blog Application</h2>
+          <h2>MERN Full Stack Blog Application 📄</h2>
           <h2><i>April 2022 - May 2022</i></h2>
           <p>Creation of a Blog site that will form part of a larger website. Developed with Agile Methodologies in a team using Slack communications.</p>
           <p>Technologies: MongoDB, Express, React, Node, Heroku, JavaScript, HTML, CSS & Bootstrap for responsive design.</p>
@@ -100,17 +102,17 @@
           <div class="projects__btn"><button>Explore</button></div>
         </div> 
         <div class="projects__card">
-          <h2>Technical Book Directory</h2>
+          <h2>Technical Book Directory 📚</h2>
           <h2><i>March 2022</i></h2>
-          <p>A directory of technical books, used to demonstrate competance of databases and database management.</p>
+          <p>A directory of technical books, used to demonstrate competance of databases and database management, while acting as a one-stop reference point.</p>
           <p>Technologies: JavaScript, Express & MongoDB.</p>
           <!-- embeds of video showcasing code in action, hosted through backend - chance to do a bit of showing off  -->
           <div class="projects__btn"><button>Explore</button></div>
         </div>
         <div class="projects__card">
-          <h2>Weather Forecast</h2>
+          <h2>Weather Forecast ☀️</h2>
           <h2><i>April 2022</i></h2>
-          <p>Working as part of a team to build a Single Page Application utilising OpenWeathers' API to create a 5-day Forecast.</p>
+          <p>Working as part of a team to build a Single Page Application utilising OpenWeathers' API to create a 5-day Forecast. Implemented features to alter visual layout of the App dependant on location temperature and extremities.</p>
           <p>Technologies: OpenWeather API, JavaScript, React, HTML, CSS & Bootstrap.</p>
           <!-- github link -->
           <div class="projects__btn"><button>Explore</button></div>
