deleted legacy pages + test page

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <br><br>I am a creative problem-solver, passionate about the user journey. 
             Adaptable and resilient, I was commended for user and client focused presentations.
             <br><br> 
-            Excited to seek a Junior Developer role, with ambitions to further specialize in user 
-            experience and UX/UI.</p>
+            I'm ready to start in a Junior Developer role, with ambitions to further specialize in user 
+            experience and creating accessible and striking features.</p>
           <button class="main__btn"><a href="#skills">What Can I Do?</a></button>
         </div> 
       </div>
@@ -169,7 +169,7 @@
           </div>
           <p class="website__rights">© James Cranham, 2021. All rights reserved.</p>
           <div class="social__icons">
-            <a href="/" class="social__icon--link" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/JimboCee" class="social__icon--link" target="_blank"><i class="fab fa-github"></i></a>
             <!-- <a href="/" class="social__icon--link" target="_blank"><i class="fab fa-instagram"></i></a> -->
             <a href="/" class="social__icon--link" target="blank"><i class="fab fa-linkedin"></i></a>
             <!-- <a href="/" class="social__icon--link" target="_blank"><i class="fab fa-twitter"></i></a> -->
