--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <p>Productivity assistant, using the Pomodoro Time Management Technique. Created to solve a personal problem, the application is accessed by multiple users over a variety of use-cases.</p>
           <p>Technologies: JavaScript, React, CSS & HTML.</p>
           
-          <div class="projects__btn"><button>Explore</button></div>
+          <div class="projects__btn"><a href="/projects/pomodoro.html"><button>Explore</button></a></div>
         </div>
         <div class="projects__card">
           <h2>MERN Full Stack Blog Application 📄</h2>
@@ -99,7 +99,7 @@
           <p>Creation of a Blog site that will form part of a larger website. Developed with Agile Methodologies in a team using Slack communications.</p>
           <p>Technologies: MongoDB, Express, React, Node, Heroku, JavaScript, HTML, CSS & Bootstrap for responsive design.</p>
           
-          <div class="projects__btn"><button>Explore</button></div>
+          <div class="projects__btn"><a href="/projects/blogApp.html"><button>Explore</button></a></div>
         </div> 
         <div class="projects__card">
           <h2>Technical Book Directory 📚</h2>
@@ -107,7 +107,7 @@
           <p>A directory of technical books, used to demonstrate competance of databases and database management, while acting as a one-stop reference point.</p>
           <p>Technologies: JavaScript, Express & MongoDB.</p>
           <!-- embeds of video showcasing code in action, hosted through backend - chance to do a bit of showing off  -->
-          <div class="projects__btn"><button>Explore</button></div>
+          <div class="projects__btn"><a href="/projects/books.html"><button>Explore</button></a></div>
         </div>
         <div class="projects__card">
           <h2>Weather Forecast ☀️</h2>
@@ -115,7 +115,7 @@
           <p>Working as part of a team to build a Single Page Application utilising OpenWeathers' API to create a 5-day Forecast. Implemented features to alter visual layout of the App dependant on location temperature and extremities.</p>
           <p>Technologies: OpenWeather API, JavaScript, React, HTML, CSS & Bootstrap.</p>
           <!-- github link -->
-          <div class="projects__btn"><button>Explore</button></div>
+          <div class="projects__btn"><a href="/projects/weather.html"><button>Explore</button></a></div>
         </div>
       </div>
     </div>
