--- a/projects/blogApp.html
+++ b/projects/blogApp.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pomodoro Timer</title>
+    <title>MERN Stack Application</title>
 </head>
 <body>
-    <h1>Hello world! This page will act as a page to showcase the Pomodoro Timer</h1>
+    <h1>Hello world! This page will house the MERN Stack Application</h1>
 </body>
 </html>
