begin progress on pomodoro page

--- a/projects/pomodoro.html
+++ b/projects/pomodoro.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pomodoro Timer</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Pomodoro Timer</title>
+        <link rel="stylesheet" href="styles.css" />
+        <link
+          rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" 
+          integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
+          crossorigin="anonymous"/>
+          <!-- to do list - move the explore button on the landing page to center, align??? transform??
+          add underline javascript to projects tab 
+          fix everything else-->
+      </head>
 <body>
-    <h1>Hello world! This page will act as a page to showcase the Pomodoro Timer</h1>
+    <!-- USE CLASS TYPES TOP BRING CSS ELEMENTS AND BODY ELEMENTS INTO THIS PAGE - CONSULT THE TEXTBOOK -->
 </body>
 </html>
