added png for project single pages - css argument

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </nav>
 
     <!-- hero section -->
-    <!-- video background envisioned, nothing fancy just short 30 second bit - shots of sheffield - shots of code in action - smiling faces etc -->
+    <!-- use the bookmarked website in the css to change this to a lovely nice gradient. love a gradient -->
     <div class="hero" id="home">
       <div class="hero__container">
         <h1 class="hero__heading">Hi, I'm <span>James</span></div></h1>
