--- a/projects/pomodoro.html
+++ b/projects/pomodoro.html
@@ -4,17 +4,44 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Pomodoro Timer</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="/projects/project_styles.css" />
         <link
-          rel="stylesheet"
-          href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" 
-          integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
-          crossorigin="anonymous"/>
-          <!-- to do list - move the explore button on the landing page to center, align??? transform??
-          add underline javascript to projects tab 
-          fix everything else-->
+        rel="stylesheet"
+        href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" 
+        integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
+        crossorigin="anonymous"/>
+          
       </head>
 <body>
-    <!-- USE CLASS TYPES TOP BRING CSS ELEMENTS AND BODY ELEMENTS INTO THIS PAGE - CONSULT THE TEXTBOOK -->
+    <!-- Navbar Section -->
+    <nav class="navbar">
+        <div class="navbar__container">
+          <!-- <a href="#home" id="navbar__logo"><i>James Cranham - Junior Web Developer for Hire</i></a> -->
+          <!-- navbar logo - text but can be altered or replaced with img -->
+          <div class="navbar__toggle" id="mobile-menu">
+            <span class="bar"></span> 
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+          <ul class="navbar__menu">
+            <li class="navbar__item">
+              <a href="#home" class="navbar__links" id="home-page">Home</a>
+            </li>
+            <li class="navbar__item">
+              <a href="#about" class="navbar__links" id="about-page">About</a>
+            </li>
+            <li class="navbar__item">
+              <a href="#projects" class="navbar__links" id="projects-page">Projects</a>
+            </li>
+            <li class="navbar__item">
+              <a href="/James Cranham - Web Developer Resume 2022.pdf" class="navbar__links" id="CV">Résumé</a>
+            </li>
+            <li class="navbar__btn">
+              <a href="#sign-up" class="button" id="signup">Contact Me</a>
+            </li>
+            
+          </ul>
+        </div>
+      </nav>
 </body>
 </html>
