Added 'What I use' to detail what I know

--- a/projects/pomodoro.html
+++ b/projects/pomodoro.html
@@ -28,7 +28,7 @@
               <a href="#home" class="navbar__links" id="home-page">Home</a>
             </li>
             <li class="navbar__item">
-              <a href="#about" class="navbar__links" id="about-page">About</a>
+              <a href="/index.html" class="navbar__links" id="about-page">About</a>
             </li>
             <li class="navbar__item">
               <a href="#projects" class="navbar__links" id="projects-page">Projects</a>
@@ -39,9 +39,10 @@
             <li class="navbar__btn">
               <a href="#sign-up" class="button" id="signup">Contact Me</a>
             </li>
-            
           </ul>
         </div>
       </nav>
+
+    <h1>Pomodoro Timer</h1>
 </body>
 </html>
