--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
         </div> 
       </div>
     </div>
-
 <!-- projects section -->
     <div class="projects" id="projects">
       <h1>Projects</h1>
@@ -119,7 +118,44 @@
           <!-- github link -->
           <div class="projects__btn"><a href="/projects/weather.html"><button>Explore</button></a></div>
         </div>
+      </div>
+    </div>
+    <div class="tools" id="tools">
+      <div class="tools_Title">
+        <i>What I use</i>
+      </div>
+      <div class="tools_wrapper">
+        <div class="tools_card">
+          <h2>HTML5</h2>
+        </div>
 
+        <div class="tools_card">
+          <h2>CSS3, SCSS & Bootstrap</h2>
+        </div>
+
+        <div class="tools_card">
+          <h2>JavaScript</h2>
+        </div>
+
+        <div class="tools_card">
+          <h2>React.js</h2>
+        </div>
+
+        <div class="tools_card">
+          <h2>Node</h2>
+        </div>
+
+        <div class="tools_card">
+          <h2>MongoDB</h2>
+        </div>
+
+        <div class="tools_card">
+          <h2>Version Control (Git/Github)</h2>
+        </div>
+
+        <div class="tools_card">
+          <h2>Basic PHP</h2>
+        </div>
       </div>
       
     </div>
