css family replacing
added toolstitle to projects css family as using them both was a pain

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     </div>
 
     <div class="tools" id="tools">
-      <div class="tools_Title">
-        Tools I use
+      <div class="projects">
+        <h1>Tools I use</h1>
       </div>
       <div class="tools_wrapper">
         <!-- build a container with css, add icons from firefox bookmark - get this done today and start on pomodoro -->
