added tools grid, need to fix page css

--- a/index.html
+++ b/index.html
@@ -84,8 +84,16 @@
       <div class="projects">
         <h1>Tools I use</h1>
       </div>
-      <div class="tools_wrapper">
-        <!-- build a container with css, add icons from firefox bookmark - get this done today and start on pomodoro -->
+      <div class="tools_section">
+        <div class="grid-item">1</div>
+  <div class="grid-item">2</div>
+  <div class="grid-item">3</div>
+  <div class="grid-item">4</div>
+  <div class="grid-item">5</div>
+  <div class="grid-item">6</div>
+  <div class="grid-item">7</div>
+  <div class="grid-item">8</div>
+  <div class="grid-item">9</div>
       </div>
       
     </div>
