set up tools grid - add icons

--- a/index.html
+++ b/index.html
@@ -85,15 +85,12 @@
         <h1>Tools I use</h1>
       </div>
       <div class="tools_section">
-        <div class="grid-item">1</div>
-  <div class="grid-item">2</div>
-  <div class="grid-item">3</div>
-  <div class="grid-item">4</div>
-  <div class="grid-item">5</div>
-  <div class="grid-item">6</div>
-  <div class="grid-item">7</div>
-  <div class="grid-item">8</div>
-  <div class="grid-item">9</div>
+        <div class="grid-item-frontend">frontend</div>
+        <div class="grid-item-frontend-info">html, css, bootstrap, js, react</div>
+        <div class="grid-item-backend">backend</div>
+        <div class="grid-item-backend-info">mongodb, php, expressJS, php, NPM</div>
+        <div class="grid-item-other">other</div>
+        <div class="grid-item-other-info">node, linux (pop), adobe creative suite</div>
       </div>
       
     </div>
