whitespace reduction tuneup

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="tools" id="tools">
       
       <div class="projects">
-        <h1>Tools I use</h1>
+        <h1>Tools I Use</h1>
       </div>
       
       <div class="tools_section">
