--- a/projects/pomodoro.html
+++ b/projects/pomodoro.html
@@ -25,19 +25,19 @@
           </div>
           <ul class="navbar__menu">
             <li class="navbar__item">
-              <a href="#home" class="navbar__links" id="home-page">Home</a>
+              <a href="/index.html" class="navbar__links" id="home-page">Home</a>
             </li>
             <li class="navbar__item">
-              <a href="/index.html" class="navbar__links" id="about-page">About</a>
+              <a href="/index.html#about" class="navbar__links" id="about-page">About</a>
             </li>
             <li class="navbar__item">
-              <a href="#projects" class="navbar__links" id="projects-page">Projects</a>
+              <a href="/index.html#projects" class="navbar__links" id="projects-page">Projects</a>
             </li>
             <li class="navbar__item">
               <a href="/James Cranham - Web Developer Resume 2022.pdf" class="navbar__links" id="CV">Résumé</a>
             </li>
             <li class="navbar__btn">
-              <a href="#sign-up" class="button" id="signup">Contact Me</a>
+              <a href="/index.html#sign-up" class="button" id="signup">Contact Me</a>
             </li>
           </ul>
         </div>
