page frames added, coherant css applied.

--- a/projects/pomodoro.html
+++ b/projects/pomodoro.html
@@ -55,7 +55,7 @@
         
         <div class="main__image--container">
           <div class="main__img--card">
-            <img src="" alt="img of the pomodoro timer (maybe a gif???)" width="350" height="350">
+            <img src="" alt="img of the pomodoro timer (maybe a gif/live demo???)" width="350" height="350">
           </div>
 
         </div> 
