portfoliosite href edit

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <h2><i>March 2022</i></h2>
           <p>Productivity assistant using the Pomodoro Time Management Technique. Created to solve a personal problem, the application is accessed by multiple users over a variety of use-cases.</p>
           <p>Technologies: JavaScript, React, CSS & HTML.</p>
-        <div class="projects__btn"><a href="/projects/pomodoro.html"><button>Explore</button></a></div>
+        <div class="projects__btn"><a href="portfolioSite/projects/pomodoro.html"><button>Explore</button></a></div>
         
       </div>
         
