routing changes for ghpages

--- a/projects/blogApp.html
+++ b/projects/blogApp.html
@@ -25,19 +25,19 @@
           </div>
           <ul class="navbar__menu">
             <li class="navbar__item">
-              <a href="/index.html" class="navbar__links" id="home-page">Home</a>
+              <a href="/portfolioSite/index.html" class="navbar__links" id="home-page">Home</a>
             </li>
             <li class="navbar__item">
-              <a href="/index.html#about" class="navbar__links" id="about-page">About</a>
+              <a href="/portfolioSite/index.html#about" class="navbar__links" id="about-page">About</a>
             </li>
             <li class="navbar__item">
-              <a href="/index.html#projects" class="navbar__links" id="projects-page">Projects</a>
+              <a href="/portfolioSite/index.html#projects" class="navbar__links" id="projects-page">Projects</a>
             </li>
             <li class="navbar__item">
               <a href="/James Cranham - Web Developer Resume 2022.pdf" class="navbar__links" id="CV">Résumé</a>
             </li>
             <li class="navbar__btn">
-              <a href="/index.html#sign-up" class="button" id="signup">Contact Me</a>
+              <a href="/portfolioSite/index.html#sign-up" class="button" id="signup">Contact Me</a>
             </li>
           </ul>
         </div>
@@ -55,7 +55,7 @@
 
         
         <div class="video_wrapper">
-          <video controls width="500" height="720" src="/videos/portfolioblogsite.mp4" type="video/mp4"></video>
+          <video controls width="500" height="720" src="/portfolioSite/videos/portfolioblogsite.mp4" type="video/mp4"></video>
           
         </div>
 
