--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="#projects" class="navbar__links" id="projects-page">Projects</a>
           </li>
           <li class="navbar__item">
-            <a href="/James Cranham - Web Developer Resume 2022.pdf" class="navbar__links" id="CV">Résumé</a>
+            <a href="/portfolioSite/James Cranham - Web Developer Resume 2022.pdf" class="navbar__links" id="CV">Résumé</a>
           </li>
           <li class="navbar__btn">
             <a href="#sign-up" class="button" id="signup">Contact Me</a>
