--- a/projects/slots.html
+++ b/projects/slots.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Pomodoro Timer</title>
+        <title>Slot Machine</title>
         <link rel="stylesheet" href="/portfolioSite/projects/project_styles.css" />
         <link
         rel="stylesheet"
@@ -45,8 +45,8 @@
     </body>
     <div class="hero" id="home">
       <div class="hero__container">
-        <h1 class="hero__heading"><span>Pomodoro Timer</span></div></h1>
-        <p class="hero__description"><span>Productivity Assistant</p><br><p class="hero__description"><i>Built with React</i></p>
+        <h1 class="hero__heading"><span>Slot Machine</span></div></h1>
+        <p class="hero__description"><span>Reel Spins and HTML5 Animation</p><br><p class="hero__description"><i>Built with PixiJS</i></p>
         </div>
         
     </div>
